--- a/notes/command.tex
+++ b/notes/command.tex
@@ -1,3 +1,8 @@
 \newcommand{\fU}{\underline{f}}
 \newcommand{\gU}{\underline{g}}
+\newcommand{\uU}{\underline{u}}
+\newcommand{\cU}{\underline{c}}
 \newcommand{\C}[2]{C_{{#1},{#2}}}
+\newcommand{\inv}{^{-1}}
+\newcommand{\HHX}{\hat{H}_X}
+\newcommand{\HHZ}{\hat{H}_Z}
