optimize cycle check

--- a/notes/Research_note.tex
+++ b/notes/Research_note.tex
@@ -31,11 +31,26 @@
   \item UTCBC$\uU(k)\text{ for }k\in\{0,1,2\}$以外に長さ$2L$以下の閉ブロックサイクルを含まない。\label{condition:c}
 \end{enumerate}
 
+\begin{requirement}\label{req:1}
+  以下の可換性条件が成り立つことを要請する。
+\begin{align}
+  g_{\ell-j} \, f_{k-\ell} = f_{k-\ell} \, g_{\ell-j} \quad (\text{for all } \ell \in [L/2],\ j,k \in [J])
+\end{align}
+ここで、$f$ と $g$ のインデックスは $L/2$ を法として解釈される。
+これは、以下の3つの記述のいずれとも等価である。
+\begin{align}
+& f_{\ell - j} \, g_{k - \ell} = g_{k - \ell} \, f_{\ell - j} \quad (\text{for all } \ell \in [L/2],\ j, k \in [J]),\\
+& \text{すべての $\ell \in [L/2]$ および $j \in \{0,\pm 1,\ldots,\pm (J-1)\}$ に対して$f_\ell$ は $g_{- \ell + j}$ と可換である。}\\
+ & \text{すべての $\ell \in [L/2]$ および $j \in \{0,\pm 1,\ldots,\pm (J-1)\}$ に対して$g_\ell$ は $f_{- \ell + j}$ と可換である。}
+\end{align}
+\end{requirement}
+
 \subsection{サイクル}\label{ssec:cycle}
 サイクルは、$L$列から偶数個の列を選び、開始行を指定することで一意に特定される。
 以下、$L=6, J=2$に固定して考える。
 
-\subsubsection{同一とみなせるサイクル}
+\subsubsection{同一とみなせるサイクル}\label{ssec:samecycle}
+\paragraph{シフト}\label{para:shift}
 $\ell$のサイクルは、$\ell / 2$個の列から構成される。
 よって、長さ$2L$以下のサイクルを考慮するには、$2,4,\dots,L$個の列からなるサイクルを考えればよい。
 \begin{definition}
@@ -75,35 +90,126 @@ $\ell=[a,b,c,d]$を2つシフトした$S^2(\ell)=[c,d,a,b]$について、
 \end{theorem}
 よって、ある列シーケンス$\ell$について、開始行が0,1行目である2つのサイクルを考えれば、列シーケンスをシフトしたものから構成されるサイクルすべてを網羅できる。
 
-\begin{requirement}\label{req:1}
-  以下の可換性条件が成り立つことを要請する。
-\begin{align}
-  g_{\ell-j} \, f_{k-\ell} = f_{k-\ell} \, g_{\ell-j} \quad (\text{for all } \ell \in [L/2],\ j,k \in [J])
-\end{align}
+\subsubsection{同じ列の選択}\label{para:samecol}
+同じ列を連続で含むときを考える。この列に含まれる2つの関数を$f,g$とする。
+この時、サイクルの関数の中でこの列に関与する部分は、$f\inv gg\inv f=\text{id}$となる。
+よって、この部分はサイクルが閉であるかには影響しないことが分かる。
+これを利用することで、例えば$[1,2,3,3,4,5]$の列選択の検査と$[1,2,4,5]$の検査をまとめることができる。
+ここで、$[1,2,3,3,2,5]$のような形の場合、同じ列を取り除いた結果、$[1,2,2,5]$のように同じ列の連続が生じることもあることに注意する。
+また、今回サイクルを形成する列選択なので、$[1,2,3,4,3,1]$のように先頭と最後の要素が等しいときも、$[2,3,4,3]$と同一視することができる。
 
-ここで、$f$ と $g$ のインデックスは $L/2$ を法として解釈される。
-これは、以下の3つの記述のいずれとも等価である。
-\begin{align}
-& f_{\ell - j} \, g_{k - \ell} = g_{k - \ell} \, f_{\ell - j} \quad (\text{for all } \ell \in [L/2],\ j, k \in [J]),\\
-& \text{すべての $\ell \in [L/2]$ および $j \in \{0,\pm 1,\ldots,\pm (J-1)\}$ に対して$f_\ell$ は $g_{- \ell + j}$ と可換である。}\\
- & \text{すべての $\ell \in [L/2]$ および $j \in \{0,\pm 1,\ldots,\pm (J-1)\}$ に対して$g_\ell$ は $f_{- \ell + j}$ と可換である。}
-\end{align}
-\end{requirement}
+\subsection{条件\ref{condition:c}で検査する列シーケンスの個数}
+\ref{ssec:samecycle}節に基づき、検査する必要のある列シーケンスの個数を考える。
+ここでは、隣り合う要素が異なり、かつ始点と終点が異なる（円環状に接続された）長さ$L$の列シーケンスを考える。使用できる列の総数を$k=6$とする。
 
-\subsection{条件\ref{condition:c}}
-\ref{ssec:cycle}節に基づき、検査する必要のあるサイクルの個数を考える。
-長さ$2l$のサイクル、つまり長さ$l$の列シーケンスを考える。
-定理\ref{th:same_cycle}より、開始行として0,1行目の2通りを考えれば、シフトして等しい列選択は同一視できる。
-長さ$l$のシーケンスは$L^l$通りあり、それぞれ$0~l-1$つのシフトを同一視できるので、検査すべき列シーケンスの総数は$L^l/l$個である。
-これに開始行が0,1行目の2通りあることを加えて、考慮すべきサイクルの総数は$2L^l/l$通りである。
-ゆえに、条件\ref{condition:c}で検査すべきサイクルの総数は$\sum_{l=1}^{L/2} \frac{2L^{2l}}{2l} = \sum_{l=1}^{L/2} \frac{L^{2l}}{l}$である。
+\begin{theorem}
+  円環状に並べた際に隣り合うものが異なる列シーケンスの総数は、 
+  \[
+    (k-1)^L + (-1)^L(k-1)
+  \]
+  で表される。
+  ただし、$L$は列シーケンスの長さ、$k$は列の選択肢の数。
+\end{theorem}
+\begin{proof}
+  まず、円環状にする前の、長さ$n$の直線の列$x_1, x_2, \dots, x_n$を考える。隣り合う要素$x_i, x_{i+1}$は常に異なるとする。
+  この直線の列全体における色の塗り分けの総数は、先頭$x_1$が$k$通り、それ以降の$x_2, \dots, x_n$がそれぞれ直前の要素と異なるため$k-1$通りであることから、
+  \begin{align}
+    W_n = k(k-1)^{n-1}
+  \end{align}
+  である。
+
+  ここで、$W_n$を以下の2つのケースに分割する。
+  \begin{itemize}
+    \item $a_n$：始点と終点が同じ色である場合の数 ($x_1 = x_n$)
+    \item $b_n$：始点と終点が異なる色である場合の数 ($x_1 \neq x_n$)
+  \end{itemize}
+  すなわち、
+  \begin{align}
+    a_n + b_n = k(k-1)^{n-1} \label{eq:total}
+  \end{align}
+  である。円環状に接続した際に条件を満たすのは、$x_1 \neq x_n$ の場合であるため、求める値は$b_L$となる。
+
+  次に、$n$から$n+1$への漸化式を考える。長さ$n$の列に、条件を満たすように新たな要素$x_{n+1}$を追加する。
+  \begin{enumerate}
+    \item $x_1 = x_{n+1}$ となる場合（$a_{n+1}$を構成する場合）：
+    $x_{n+1}$は$x_n$と異なる必要がある。また、$x_{n+1}$は$x_1$と同じ色になるため、必然的に$x_n \neq x_1$でなければならない。
+    つまり、$x_1 \neq x_n$である状態（$b_n$通り）の末尾に、$x_1$と同じ色（1通り）を追加する場合のみ発生する。
+    \begin{align}
+      a_{n+1} = b_n \times 1 = b_n \label{eq:rec_a}
+    \end{align}
+    
+    \item $x_1 \neq x_{n+1}$ となる場合（$b_{n+1}$を構成する場合）：
+    これは全事象から$a_{n+1}$を引いたものである。式(\ref{eq:total})より、
+    \begin{align}
+      b_{n+1} = k(k-1)^n - a_{n+1}
+    \end{align}
+  \end{enumerate}
+
+  式(\ref{eq:rec_a})を代入すると、以下の$b_n$に関する漸化式が得られる。
+  \begin{align}
+    b_{n+1} = k(k-1)^n - b_n
+  \end{align}
+  この漸化式を解く。
+  \begin{align}
+    b_{n+1} - (k-1)^{n+1} &= -(b_n - (k-1)^n) \\
+    b_n - (k-1)^n &= (-1)^{n-2} (b_2 - (k-1)^2)
+  \end{align}
+  ここで、$n=2$の場合、隣り合う要素は異なるため必ず$x_1 \neq x_2$となる。よって$a_2 = 0, b_2 = k(k-1)$である。
+  \begin{align}
+    b_2 - (k-1)^2 &= k(k-1) - (k-1)^2 \\
+    &= (k-1)(k - (k-1)) \\
+    &= k-1
+  \end{align}
+  したがって、
+  \begin{align}
+    b_n - (k-1)^n &= (-1)^{n-2}(k-1) \\
+    b_n &= (k-1)^n + (-1)^n(k-1)
+  \end{align}
+  以上より、長さ$L$の円環状の列シーケンスの総数は $(k-1)^L + (-1)^L(k-1)$ となる。
+\end{proof}
+まず、$L=6$の場合を考える。
+$k=6, L=6$を代入すると、
+  \begin{align}
+    5^6 + 5 = 15630
+  \end{align}
+  通りとなる。
+\ref{para:shift}節を考慮し、シフトにより重なるものを同一視する。この際、周期的なパターン（$ababab$のような周期2の列や、$abcabc$のような周期3の列）は、シフトにより生成される同値類のサイズが小さくなるため、区別して数える必要がある。
+\begin{itemize}
+  \item 周期2の列（例：$ababab$）：$a,b$の選び方は$6 \times 5 = 30$通り。これらはシフトにより2つの列と同一視されるため、検査対象は$30/2 = 15$通り。
+  \item 周期3の列（例：$abcabc$）：$a,b,c$が条件を満たす選び方は $5^3 - 5 = 120$通り。これらはシフトにより3つの列と同一視されるため、検査対象は$120/3 = 40$通り。
+  \item 周期6の列（上記のいずれでもないもの）：総数から周期的な列を除くと $15630 - 30 - 120 = 15480$通り。これらはシフトにより6つの列と同一視されるため、検査対象は $15480/6 = 2580$通り。
+\end{itemize}
+以上より、検査すべき列シーケンスは $15 + 40 + 2580 = 2635$通りとなる。
+
+次に、$L=4$の場合を考える。
+同様に列シーケンス（始点指定あり）の総数は、
+\begin{align}
+  5^4 + 5 = 630
+\end{align}
+通りとなる。シフトによる同一視を考慮する。
+\begin{itemize}
+  \item 周期2の列（例：$abab$）：$6 \times 5 = 30$通り。シフトにより2つの列と同一視されるため、$30/2 = 15$通り。
+  \item 周期4の列（周期2でないもの）：$630 - 30 = 600$通り。シフトにより4つの列と同一視されるため、$600/4 = 150$通り。
+\end{itemize}
+以上より、検査すべき列シーケンスは $15 + 150 = 165$通りとなる。
+
+最後に、$L=2$の場合を考える。
+列シーケンス（始点指定あり）の総数は、
+\begin{align}
+  5^2 + 5 = 30
+\end{align}
+通りとなる。
+周期1の列（$aa$）は条件を満たさないため存在しない。すべての列が周期2（最小周期が長さと一致）であるため、単純に$L=2$で割ることができる。
+検査すべき列シーケンスは $30/2 = 15$通りとなる。
+
+以上より、検査する列シーケンスの総数は$2635+165+15=2815$通り。
 
 \subsection{UTCBC}
 論文では、開始行が0行目であるとき、列選択
 $[0,3+j\%3,1,3+(j-1)\%3,2,3+(j-2)\%3]$
 からなるサイクルがUTCBCであることが示されている。
 確認として、開始行が1行目の場合についても考える。
-\[
+\begin{align}
   \uU(j)_1 = 
   f_2
   \rightarrow g_{j-1}
@@ -118,7 +224,7 @@ $[0,3+j\%3,1,3+(j-1)\%3,2,3+(j-2)\%3]$
   \rightarrow g_{j+1}
   \rightarrow f_0
   \rightarrow f_2
-\]
+\end{align}
 \begin{align}
   f_{\uU(j)_1}(x) &= 
   (
@@ -340,7 +446,8 @@ $a_1\neq 1$のとき、以下の2つの場合に分けて考える。
     $A = dA', P = dP'$とすると、$x$は$dA'x=mP=mdP'$を満たせばよい($m\in\mathbb{Z}$)。
     $A'$と$P'$は互いに素なので、$x$は$P'$の倍数であればよい。
     よって、解は$b_2=nP'(n=0,1,\dots,d-1)$となる。
-
 \end{description}
+
+
 
 \end{document}
