--- a/notes/command.tex
+++ b/notes/command.tex
@@ -2,6 +2,8 @@
 \newcommand{\gU}{\underline{g}}
 \newcommand{\uU}{\underline{u}}
 \newcommand{\cU}{\underline{c}}
+\newcommand{\aU}{\underline{a}}
+\newcommand{\bU}{\underline{b}}
 \newcommand{\C}[2]{C_{{#1},{#2}}}
 \newcommand{\inv}{^{-1}}
 \newcommand{\HHX}{\hat{H}_X}
