--- a/notes/command.tex
+++ b/notes/command.tex
@@ -1,9 +1,11 @@
 \newcommand{\fU}{\underline{f}}
 \newcommand{\gU}{\underline{g}}
 \newcommand{\uU}{\underline{u}}
-\newcommand{\cU}{\underline{c}}
 \newcommand{\aU}{\underline{a}}
 \newcommand{\bU}{\underline{b}}
+\newcommand{\cU}{\underline{c}}
+\newcommand{\dU}{\underline{d}}
+\newcommand{\zeroU}{\underline{0}}
 \newcommand{\C}[2]{C_{{#1},{#2}}}
 \newcommand{\inv}{^{-1}}
 \newcommand{\HHX}{\hat{H}_X}
